2008-11-08  Cedric Vivier  <cedricv@neonux.com>

	* AvoidRedundancyInTypeNameRule.cs: New.
	This rule checks if a type is prefixed with the last component of its
	enclosing namespace, and that removing the prefix would not cause
	undesirable ambiguity with its base type or a type from a parent namespace.
	If possible, removing the prefix from the type name usually makes an API less
	verbose and more autocompletion-friendly.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Naming.mdp:
	* Gendarme.Rules.Naming.csproj: Activate makefile integration for all
	the rules projects. Remove the old mdp files as they are no longer
	needed.

2008-11-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRedundancyInMethodNameRule.cs: Change IsTypeFromAlienNamespace
	to static.

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* AvoidRedundancyInMethodNameRule.cs: New.
	This rule checks if a method is named against its first parameter's type.
	Usually removing that type name from the method name makes an API less
	verbose, easier to learn, and more future-proof.

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs: Removed since its logic
	is now covered inside UseCorrectSuffixRule.
	* UseCorrectSuffixRule.cs: Now checks if a suffix is misused, not 
	just missing, on a type.
	* Makefile.am: Remove EnumNotEndsWithEnumOrFlagsSuffixRule rule and
	tests source from build.

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs: Add missing XML doc.
	* UseCorrectPrefixRule.cs: Add prefix check for generic parameter
	types.

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeepNamespaceHierarchyRule.cs, 
	DetectNonAlphaNumericsInTypeNamesRule.cs, UseCorrectCasingRule.cs,
	UsePreferredTermsRule.cs: Rename Namespace to NamespaceDefinition.

2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>
